tests/baselines/reference/parserES5SymbolProperty9.errors.txt
tests/cases/conformance/parser/ecmascript5/Symbols/parserES5SymbolProperty9.ts(2,6): error TS2304: Cannot find name 'Symbol'.


==== tests/cases/conformance/parser/ecmascript5/Symbols/parserES5SymbolProperty9.ts (1 errors) ====
    var x: {
        [Symbol.toPrimitive]: string
         ~~~~~~
!!! error TS2304: Cannot find name 'Symbol'.
    }